Novo layout a adição de icones do font-awesome

--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,115 @@
+body {
+	background-color: #20242A;
+}
+a {
+	color: #3A5DA3;
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: underline;
+}
+a.btn:hover {
+	text-decoration: none;
+}
+input {
+  caret-color: #2953A8;
+}
+input:focus {
+	outline: #2953A8 solid 2px;
+}
+.btn {
+  background-color: #282C34;
+  padding: 8px;
+  color: #aaa;
+  border: 1px solid #666;
+  border-radius: 2px;
+}
+
+#menu {
+	width: 80%;
+	margin: 1% auto;
+	display: flex;
+	justify-content: space-around;
+}
+.tarefas-container {
+  width: 60%;
+  /* display: block; */
+  margin: 0 auto;
+  padding: 1%;
+  background-color: #20242A;
+}
+.tarefa {
+  background-color: #282C34;
+  margin: 1% auto;
+  height: 4em;
+  position: relative;
+  width: 80%;
+	min-height: 110px;
+  box-sizing: border-box;
+}
 div.tarefa input, input#adiciona {
-	width: 500px;
+	width: 70%;
 	border: 0;
 	padding: 5px;
 	font-size: 16px;
-	background-color: #CCDAEF;
-	margin: 3px 0;
-	color: #444;
-    font-family: monospace;
+	background-color: inherit;
+	margin: 1px 1%;
+	color: #aaa;
+  font-family: monospace;
+	box-sizing: border-box;
+}
+div.ativada {
+	border-left: 4px solid #E95358;
+}
+#tempoEmAtividade {
+  position: absolute;
+  bottom: 6%;
+  right: 2%;
+  color: #aaa;
+  font-size: .9em;
+  font-style: italic;
+  font-family: monospace;
 }
 
-div.ativada input {
-	background-color: #EFCFCC;
+/*Icons*/
+.fa {
+	color: #aaa;
+	margin: 1%;
+}
+.icons {
+  position: absolute;
+  right: 2%;
+  top: 10%;
+  width: 8%;
+	min-width: 50px;
+	cursor: pointer;
+	display: flex;
+	justify-content: space-around;
+}
+
+/*Relatorio*/
+.relatorio{
+	color: #aaa;
+	font-family: monospace;
+	width: 48%;
+	margin: auto;
+	line-height: 25px;
+  padding: 2%;
+}
+
+@media only screen and (max-width: 500px) {
+    div.tarefa input, input#adiciona {
+			width: 90%;
+		}
+		.fa {
+			font-size: 1.5em;
+		}
+		.icons {
+			width: 100%;
+			position: relative;
+		}
+		#tempoEmAtividade {
+			position: relative;
+			margin-left: 8%;
+		}
 }
