recarregamento automatico, uso em mais de um dispositivo e css mobile

--- a/css/main.css
+++ b/css/main.css
@@ -112,4 +112,19 @@ div.ativada {
 			position: relative;
 			margin-left: 8%;
 		}
+		.tarefas-container {
+			width: 100%;
+		}
+		.tarefa {
+			min-height: 100px;
+		}
+		#menu {
+			flex-direction: column;
+			min-height: 120px;
+			align-items: flex-start;
+		}
+		#menu input {
+			width: 95%;
+			font-size: 13px;
+		}
 }
